# Dopaming

./: CLAUDE.md  Dopaming1  README.md  dopaming2  index.html
.claude/agents/: fruit-dev.md
.github/workflows/: pages.yml
agents/kbeauty-trend-agent/: README.md  batch_classify.py  config.py  main.py  orchestrator.py  requirements.txt  sources.py  subagents.py
agents/kbeauty-trend-agent/dashboard/: 2026-07-18-launch-intel.html
agents/kbeauty-trend-agent/sample_data/: naver_datalab_2026-07-18.json
assets/: app.js  style.css
coupang-automation/: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  sku_map.example.csv
coupang-automation/coupang_auto/: cli.py  config.py  coupang_client.py  db.py  order_sheet.py  pipeline.py  scheduler.py  sheet.py  telegram_bot.py  watcher.py
coupang-automation/coupang_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
coupang-automation/tests/: test_client.py  test_order_sheet.py  test_pipeline.py  test_sheet.py  test_watcher.py
couple/: index.html
fruit/: README.md  index.html  order.html
fruit/assets/: order.js  style.css
fruit/docs/: DESIGN.md
memento-mori/: README.md  index.html
our-seasons/: README.md  index.html  sw.js
our-seasons-beta/: README.md  index.html  manifest.json  quotes.js  sw.js
