[project]
name = "coupang-auto"
version = "0.1.0"
description = "쿠팡 과일 위탁판매 자동화 (주문수집·발주·승인 파이프라인)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
coupang-auto = "coupang_auto.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coupang_auto"]
